# RLGymTraining

./: .env-example  .gitignore  README.md  pyproject.toml
config/: setup.yaml
docs/: AI_WORKFLOW.md  ASSESSMENT_COVERAGE.md  COST_ANALYSIS.md  EXPERIMENTS.md  PLAN.md  PMDATA_DATASET.md  PRD.md  PRD_a2c.md  PRD_data_pipeline.md  PRD_lstm_world_model.md  PRD_problem_formulation.md  PRD_reinforce.md  PRD_reward_function.md  TODO.md  VERSION_HISTORY.md
scripts/: download_pmdata.py  generate_readme_assets.py
src/rl_gym_training/: __init__.py
src/rl_gym_training/data/: data_loader.py  dataset.py  preprocessing.py
src/rl_gym_training/models/: actor_critic.py  lstm_world_model.py  policy_network.py
src/rl_gym_training/rl/: a2c.py  action_masking.py  environment.py  reinforce.py  reward.py
src/rl_gym_training/sdk/: __init__.py  sdk.py
src/rl_gym_training/services/: evaluation_service.py  train_a2c_service.py  train_lstm_service.py  train_reinforce_service.py
src/rl_gym_training/shared/: cli.py  config.py  paths.py  seed.py
src/rl_gym_training/ui/: tk_dashboard.py
src/rl_gym_training/web/: dashboard.py
src/rl_gym_training/web/static/: app.css  app.js  index.html
tests/unit/: test_config_seed_data.py  test_dashboard.py  test_models_and_reward.py  test_rl_algorithms.py  test_sdk.py  test_tk_dashboard.py
