[project]
name = "rl-gym-training"
version = "0.1.0"
description = "Educational REINFORCE and A2C workout recommendation project with an LSTM world model."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.8",
    "numpy>=1.26",
    "pandas>=2.2",
    "pyyaml>=6.0",
    "torch>=2.2",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov>=5.0", "ruff>=0.5"]

[project.scripts]
rl-gym-training = "rl_gym_training.shared.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rl_gym_training"]

[tool.ruff]
line-length = 100
target-version = "py310"
exclude = [".venv", ".uv-cache", "data", "results"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.coverage.run]
source = ["src"]
omit = ["src/rl_gym_training/shared/cli.py"]

[tool.coverage.report]
fail_under = 75
show_missing = true
